--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-pmgraph (1.0.2) hardy; urgency=low
+pmgraph (1.1.9) hardy; urgency=low
 
   * Initial release. (Closes: #XXXXXX)
 
- --  Aptivate <info+pmgraph@aptivate.org>  Mon, 20 Apr 2009 12:20:04 +0100
+ --  Aptivate <pmgraph-team@aptivate.org>  Mon, 20 Apr 2009 12:20:04 +0100
 
