--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-pmgraph (1.2.2) hardy; urgency=low
+pmgraph (1.2.3) unstable; urgency=low 
 
-  * Initial release. (Closes: #XXXXXX)
+  * Initial release. (Closes: #XXXXXX) 
 
- --  Aptivate <pmgraph-team@aptivate.org>  Mon, 20 Apr 2009 12:20:04 +0100
+ --  Aptivate <info+pmgraph@aptivate.org>  Mon, 20 Apr 2009 12:20:04 +0100
+ 
 
